--- a/package.json
+++ b/package.json
@@ -1,17 +1,35 @@
 {
   "name": "bs_timestamp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Karin Meersman",
-  "license": "MIT",
+  "description": "timestamp node app",
+  "main": "serverExpr.js",
   "dependencies": {
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "save": "^2.3.0",
     "moment": "^2.17.0",
     "socket.io": "^1.4.8"
-  }
+  },
+    "engines": {
+    "node": "4.4.5"
+  },
+  "keywords": [
+    "timestamp",
+    "heroku"
+  ],  
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serverExpr.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mientje/fcc-timestamp.git"
+  },
+  "author": "Karin Meersman",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mientje/fcc-timestamp/issues"
+  },
+  "homepage": "https://github.com/mientje/fcc-timestamp#readme"
 }
