--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "socket.io": "^1.4.8"
   },
     "engines": {
-    "node": "4.4.5"
+    "node": "5.9.1"
   },
   "keywords": [
     "timestamp",
@@ -20,7 +20,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serverExpr.js"
+    "start": "node serverExpr.js"
   },
   "repository": {
     "type": "git",
